@@ -10,23 +10,29 @@ import me.chromiumore.tigerbank.domain.Operation;
 import me.chromiumore.tigerbank.repository.AccountRepository;
 import me.chromiumore.tigerbank.repository.CategoryRepository;
 import me.chromiumore.tigerbank.repository.OperationsRepository;
+import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 
+@Component
 public class JsonImportStrategy extends ImportStrategy {
     @Override
     protected Map<Integer, BaseEntity> convertData() {
         ObjectMapper objectMapper = new ObjectMapper();
         objectMapper.registerModule(new JSR310Module());
 
+
         Map<Integer, ? extends BaseEntity> data = new HashMap<>();
 
         try {
-            String content = Files.readString(Path.of(filePath));
+            Path path = Paths.get("./target/" +  fileName);
+
+            String content = Files.readString(path);
             if (repository instanceof AccountRepository) {
                 data = objectMapper.readValue(
                         content,
